<resources>
    <!--  unity  -->
    <string name="action_settings">Settings</string>
    <string name="game_view_content_description">Game view</string>
    <string name="show_unity">Show Unity</string>
    <string name="show_unity_game">Show UnityGameActivity</string>
    <string name="finish_unity">Finish Unity</string>
    <!-- Dictionary -->
    <string name="your_name">اسمك ايه</string>
    <string name="fine">انا بخير</string>
    <string name="welcome">اهلا وسهلا</string>
    <string name="birthdate">تاريخ ميلادك</string>
    <string name="thanks">شكرا</string>
    <string name="how_are_you">عامل ايه</string>
    <string name="address">عنوانك ايه</string>
    <string name="HBD">كل عام وانت بخير</string>
    <string name="ur_job">أنت شغال أيه</string>
    <string name="ur_age">عندك كام سنة</string>
    <string name="sorry">أنا آسف</string>
    <string name="congrats">مبارك</string>
    <!-- letters  -->
    <string name="alf">ألف - أ</string>
    <string name="baa">باء - ب</string>
    <string name="taa">تاء - ت</string>
    <string name="thaa">ثاء - ث</string>
    <string name="geem">جيم - ج</string>
    <string name="haa">حاء - ح</string>
    <string name="khaa">خاء - خ</string>
    <string name="dal">دال - د</string>
    <string name="zal">ذال - ذ</string>
    <string name="raa">راء - ر</string>
    <string name="zay">زاي - ز</string>
    <string name="seen">سين - س</string>
    <string name="sheen">شين - ش</string>
    <string name="sad">صاد - ص</string>
    <string name="ddad">ضاد - ض</string>
    <string name="ttaa">طاء - ط</string>
    <string name="zaa">ظاء - ظ</string>
    <string name="ein">عين - ع</string>
    <string name="ghin">غين - غ</string>
    <string name="faa">فاء - ف</string>
    <string name="quaf">قاف - ق</string>
    <string name="kaf">كاف - ك</string>
    <string name="lam">لام - ل</string>
    <string name="mim">ميم - م</string>
    <string name="noon">نون - ن</string>
    <string name="haaa">هاء - ه</string>
    <string name="waw">واو - و</string>
    <string name="yaa">ياء- ي</string>
    <!-- numbers  -->
    <string name="zero">صفر - 0</string>
    <string name="one">واحد - 1</string>
    <string name="two">اثنين - 2</string>
    <string name="three">ثلاثة - 3</string>
    <string name="four">أربعة - 4</string>
    <string name="five">خمسة - 5</string>
    <string name="six">ستة - 6</string>
    <string name="seven">سبعة - 7</string>
    <string name="eight">ثمانية - 8</string>
    <string name="nine">تسعة - 9</string>
    <string name="t10">عشرة - 10</string>
    <string name="e11">إحدى عشر - 11</string>
    <string name="t12">إثنى عشر - 12</string>
    <string name="t13">ثلاثة عشر - 13</string>
    <string name="f14">أربعة عشر - 14</string>
    <string name="f15">خمسة عشر - 15</string>
    <string name="s16">ستة عشر - 16</string>
    <string name="s17">سبعة عشر - 17</string>
    <string name="e18">ثمانية عشر - 18</string>
    <string name="n19">تسعة عشر - 19</string>
    <string name="t20">عشرون - 20</string>
    <!--  family  -->
    <string name="father">أب</string>
    <string name="mother">أم</string>
    <string name="grandpa">جد</string>
    <string name="grandma">جدة</string>
    <string name="boy">ولد</string>
    <string name="girl">بنت</string>
    <string name="brother">أخ</string>
    <string name="sister">أخت</string>
    <string name="baba">بابا</string>
    <string name="mama">ماما</string>
    <string name="woman">امرأة</string>
    <string name="uncle">عم</string>
    <string name="aunt">عمة</string>
    <string name="family_osra">أسرة</string>
    <string name="brothers">أخوات</string>
    <string name="infant">رضيع</string>
    <!--  weekdays  -->
    <string name="st">السبت</string>
    <string name="su">الأحد</string>
    <string name="mo">الإثنين</string>
    <string name="tu">الثلاثاء</string>
    <string name="we">الأربعاء</string>
    <string name="th">الخميس</string>
    <string name="fr">الجمعة</string>
    <!--  pronouns  -->
    <string name="i">أنا</string>
    <string name="you">أنت</string>
    <string name="nhno">نحن</string>
    <string name="hoala">هؤلاء</string>
    <string name="hatan">هاتان</string>
    <string name="hazan">هاذان</string>
    <string name="haza">هذا</string>
    <string name="hazahi">هذه</string>
    <string name="hwma">هما</string>
    <string name="he">هو</string>
    <string name="she">هي</string>
    <!--  app  -->
    <string name="app_name">كلمني</string>
    <string name="home">الرئيسية</string>
    <string name="dict">القاموس</string>
    <string name="educate">تعلم</string>
    <string name="imageDesc">image description</string>
    <string name="oneSpeed">1.0</string>
    <string name="letters">حروف اللغة العربية</string>
    <string name="family">العائلة</string>
    <string name="weekdays">أيام الاسبوع</string>
    <string name="pronouns">الضمائر وأسماء الإشارة</string>
    <string name="numbers">الأرقام</string>
    <string name="try1">جرب</string>
    <string name="watch">شاهد</string>
    <string name="right_guess">توقعك صحيح بنسبة</string>
    <string name="wrong_guess">توقعك خطأ التوقع الصحيح هو</string>
    <string name="try_again">لم يستطع الاستنتاج أعد المحاولة</string>
    <string name="no_video">لا يوجد فيديو</string>
    <string name="letters1">الحروف</string>
    <string name="words">الكلمات</string>
    <string name="tts_title">من نص إلى لغة إشارة</string>
    <string name="tts_desc">حول الحروف والكلمات والجمل للغة إشارة عن طريق 3D Character</string>
    <string name="stt_title">من لغة إشارة إلي نص</string>
    <string name="stt_desc">ترجم لغة الإشارة إلي حروف وكلمات وجمل</string>
    <string name="start">ابدأ الآن</string>
    <string name="about_app">عن التطبيق</string>
    <string name="about_home">الصفحة الرئيسية : استخدمها للتحويل من نصوص وكلمات إلي لغة إشارة عن طريق 3D character، ومن لغة إشارة إلي نصوص وكلمات عن طريق كاميرا الموبايل</string>
    <string name="about_dict">القاموس : ستجد فيها أشهر الجمل والكلمات الجاهزة التي يمكنك الاختيار منها ومن ثم يقوم 3D character بتنفيذها</string>
    <string name="about_watch">شاهد الحركة التي ينفذها 3D character</string>
    <string name="about_test">قم بتجربة الحركة بنفسك ومعرفة إذا كان تنفيذك صحيح أم خطأ</string>
    <string name="skip">تخطي</string>
    <string name="next">التالي</string>
    <string name="about_edu">تعلم : اقسام متنوعة لتعليمك لغة الإشارة</string>

</resources>