<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.general.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_home"
                android:contentDescription="@string/infant"
                android:layout_marginVertical="5dp"/>

            <androidx.cardview.widget.CardView
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:background="@drawable/background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:padding="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/tts_title"
                            android:background="@null"
                            android:textColor="@color/white"
                            android:fontFamily="@font/tajawal"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:background="@null"
                            android:fontFamily="@font/tajawal"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/tts_desc"
                            android:textColor="#DBDBDB"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:lineSpacingExtra="4dp"
                            />

                        <com.balysv.materialripple.MaterialRippleLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginHorizontal="35dp"
                            style="@style/RippleStyle">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/to_sign_btn"
                                android:background="@drawable/category_button_shape"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/start"
                                android:fontFamily="@font/tajawal_medium"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:drawableEnd="@drawable/ic_right_arrow"/>
                        </com.balysv.materialripple.MaterialRippleLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_margin="5dp"
                        android:contentDescription="@string/s16"
                        android:padding="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_tts"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:background="@drawable/background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:padding="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/stt_title"
                            android:background="@null"
                            android:textColor="@color/white"
                            android:fontFamily="@font/tajawal"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="3"
                            android:background="@null"
                            android:fontFamily="@font/tajawal"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/stt_desc"
                            android:textColor="#DBDBDB"
                            android:textSize="12sp"
                            android:lineSpacingExtra="4dp"
                            android:textStyle="bold" />

                        <com.balysv.materialripple.MaterialRippleLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginHorizontal="35dp"
                            style="@style/RippleStyle">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/to_text_btn"
                                android:background="@drawable/category_button_shape"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/start"
                                android:fontFamily="@font/tajawal_medium"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:drawableEnd="@drawable/ic_right_arrow"/>
                        </com.balysv.materialripple.MaterialRippleLayout>
                    </LinearLayout>

                    <ImageView
                        android:layout_margin="5dp"
                        android:contentDescription="@string/s16"
                        android:padding="5dp"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_stt"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_btn"
        android:layout_alignParentTop="true"
        android:layout_margin="25dp"
        android:src="@drawable/ic_info"
        android:background="@null"
        android:contentDescription="@string/imageDesc"/>

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:visibility="gone"
        android:id="@+id/info_layout"
        android:layout_centerInParent="true">

        <include layout="@layout/info_layout"/>
    </FrameLayout>

</RelativeLayout>