<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.educational_section.EducationalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="35dp"
        android:gravity="center"
        android:padding="3dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_category"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:id="@+id/img"
            android:contentDescription="@string/imageDesc" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_marginHorizontal="7dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            style="@style/RippleStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/letters_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                app:cardElevation="2dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/letters"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/tajawal_medium"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_marginHorizontal="7dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            style="@style/RippleStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/family_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                app:cardElevation="2dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/family"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/tajawal_medium"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_marginHorizontal="7dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            style="@style/RippleStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/weekdays_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                app:cardElevation="2dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weekdays"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/tajawal_medium"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_marginHorizontal="7dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            style="@style/RippleStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/pronouns_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                app:cardElevation="2dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pronouns"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/tajawal_medium"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_marginHorizontal="7dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            style="@style/RippleStyle">

            <androidx.cardview.widget.CardView
                android:id="@+id/numbers_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background"
                app:cardElevation="2dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/numbers"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/tajawal_medium"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</ScrollView>