<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:gravity="center"
    android:background="@drawable/category_button_shape"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_margin="2dp"
        android:id="@+id/test"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse_background"
        android:padding="2dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_try"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@null"/>

        <TextView
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/tajawal_medium"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:id="@+id/watch"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse_background"
        android:padding="2dp"
        android:gravity="center_vertical">

        <ImageButton
            android:src="@drawable/ic_play"
            android:background="@null"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/imageDesc"
            android:padding="3dp"
            tools:ignore="TouchTargetSizeCheck"/>

        <TextView
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/tajawal_medium"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true"
        android:layout_marginHorizontal="2dp"
        android:id="@+id/word"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/imageDesc"
        android:textSize="16sp"
        android:fontFamily="@font/tajawal"
        android:textColor="@color/white"/>

</LinearLayout>